<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text_btn1"
        android:onClick="sendChatMsg"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text_btn2"
        android:onClick="sendSubscribeMsg"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text_btn3"
        android:onClick="deleteChatMsgChannel"
        tools:ignore="UsingOnClickInXml" />

</LinearLayout>