<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/dialog_push_out_text_title1"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/dialog_push_out_text_title2"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <!--   横线    -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/dialog_push_out_text_title3"
                android:textSize="20sp"
                android:textColor="@color/dialog_push_out_confirm"/>  <!-- @null 设置后会显示为白色背景-->
            <!--   竖线    -->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/dialog_push_out_text_title4"
                android:textSize="20sp"
                android:textColor="@color/dialog_push_out_cancel"/>  <!-- @null 设置后会显示为白色背景-->

        </LinearLayout>

    </LinearLayout>

</LinearLayout>